# zydis-rs-issue-29

./: Cargo.toml
